# ideez

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/v1/: __init__.py  authorization.py  me.py  users.py  videos.py
backend/app/auth/: __init__.py  auth_handler.py
backend/app/core/: __init__.py  settings.py
backend/app/crud/: __init__.py  seed_db.py  user.py  video.py
backend/app/database/: __init__.py  base.py  database.py
backend/app/domain/: __init__.py  user.py  video.py
backend/app/infrastructure/application/: __init__.py  cloudinary.py  factory.py  middleware.py
backend/app/schemas/: __init__.py  auth_schemas.py  user_schemas.py  video_schemas.py
backend/app/schemas/user/: __init__.py  base.py  create.py  response.py  update.py
backend/app/utils/: __init__.py  auth_utils.py
backend/migrations/: env.py
backend/migrations/versions/: 03ab00ad5035_add_hashed_password_and_created_at_.py  25fa189c30e1_add_videos_table.py  3518ff9c14f6_initial_migration.py  797699fb3989_add_created_at_to_video.py  a77871408f83_initial_create_tables.py  bef99fd0a467_connect_video_to_user_with_uuid_foreign_.py  d58f136269f5_initial_migration.py  f11bc7deca5c_add_hashed_password_column_to_users.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/lib/: api.ts  types.ts
frontend/src/: App.css  App.tsx  env.d.ts  index.css  main.tsx
frontend/src/components/: Card.tsx  Navbar.tsx  Video.tsx
frontend/src/pages/: AccountPage.tsx  AddVideo.tsx  Home.tsx  (+5 more)
(+4 files in other folders)
